fix: prevent body from scrolling when menu is open on mobile

--- a/src/styles/_containers.styl
+++ b/src/styles/_containers.styl
@@ -14,6 +14,9 @@ body
 
   &.is-homepage
     background-color $body-bkg
+    
+  &.has-layer
+  	overflow hidden
 
   &.is-introductionFullHeight
     .introduction
